be/src/exec/parquet-column-readers.cc
@@ -400,11 +400,8 @@ ScalarColumnReader<InternalType, PARQUET_TYPE, MATERIALIZED>::ScalarColumnReader
     fixed_len_size_ = -1;
   }
   needs_conversion_ = slot_desc_->type().type == TYPE_CHAR ||
-      // TODO: Add logic to detect file versions that have unconverted TIMESTAMP
-      // values. Currently all versions have converted values.
-      (FLAGS_convert_legacy_hive_parquet_utc_timestamps &&
-      slot_desc_->type().type == TYPE_TIMESTAMP &&
-      parent->file_version_.application == "parquet-mr");
+      (slot_desc_->type().type == TYPE_TIMESTAMP &&
+      parent->IsTimezoneConversionNeededForTimestamps());
 }
 
 template <typename InternalType, parquet::Type::type PARQUET_TYPE, bool MATERIALIZED>
